force-app/main/default/objects/PreReservation__c/PreReservation__c.object-meta.xml
<CustomObject>
    <label>Pre-Reservation</label>
    <nameField>
        <displayFormat>ECO-{000000}</displayFormat>
        <label>Pre Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>