force-app/main/default/objects/PreReservation__c/fields/CA_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Name__c</fullName>
    <label>CA Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>