force-app/main/default/objects/PreReservation__c/fields/CA_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_Number__c</fullName>
    <formula>Client_Advisor__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Number</label>
    <type>Text</type>
</CustomField>