force-app/main/default/objects/PreReservation__c/fields/Client_Advisor2__c.field-meta.xml
<CustomField>
    <fullName>Client_Advisor2__c</fullName>
    <formula>Client_Advisor__r.FirstName +&apos; &apos;+ Client_Advisor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Advisor</label>
    <type>Text</type>
</CustomField>