force-app/main/default/objects/PreReservation__c/fields/Client_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Client_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Client Advisor</description>
    <label>Client Advisor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.IsTechnicalUser__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Identity User</value>
        </filterItems>
        <filterItems>
            <field>User.WWEmployeeNumber__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PreReservations</relationshipName>
    <type>Lookup</type>
</CustomField>