force-app/main/default/objects/PreReservation__c/fields/Client_Dream_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Dream_ID__c</fullName>
    <formula>Client__r.DREAMID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Dream ID</label>
    <type>Text</type>
</CustomField>