force-app/main/default/objects/PreReservation__c/fields/Client_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Client_ReadOnly__c</fullName>
    <formula>Client__r.FirstName  + &apos; &apos; +   Client__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Text</type>
</CustomField>