force-app/main/default/objects/PreReservation__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <formula>Client__r.Segmentation_To_Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Status</label>
    <type>Text</type>
</CustomField>