force-app/main/default/objects/PreReservation__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Store__r.StoreCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country / Region</label>
    <type>Text</type>
</CustomField>