force-app/main/default/objects/PreReservation__c/fields/Deposit_collected__c.field-meta.xml
<CustomField>
    <fullName>Deposit_collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit collected</label>
    <type>Checkbox</type>
</CustomField>