force-app/main/default/objects/PreReservation__c/fields/Deposit_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Number__c</fullName>
    <label>Deposit Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>