force-app/main/default/objects/PreReservation__c/fields/Exclusive_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exclusive Campaign</label>
    <referenceTo>Exclusive_Campaign__c</referenceTo>
    <relationshipLabel>Pre-Reservations</relationshipLabel>
    <relationshipName>Pre_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>