force-app/main/default/objects/PreReservation__c/fields/Exclusive_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Campaign_Name__c</fullName>
    <formula>Exclusive_Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclusive Campaign Name</label>
    <type>Text</type>
</CustomField>