force-app/main/default/objects/PreReservation__c/fields/Important_Number__c.field-meta.xml
<CustomField>
    <fullName>Important_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For clients who want a specific serial number only, no other serial number will be allocated to the client in case of unavailability</inlineHelpText>
    <label>Specific Number Only ?</label>
    <type>Checkbox</type>
</CustomField>