force-app/main/default/objects/PreReservation__c/fields/Initial_Serial_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Initial_Serial_Number_Formula__c</fullName>
    <formula>IF(Serial_Number_Retail__c = 0, &apos;&apos;, TEXT(Serial_Number_Retail__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Serial Number</label>
    <type>Text</type>
</CustomField>