force-app/main/default/objects/PreReservation__c/fields/Management_Level_Zone__c.field-meta.xml
<CustomField>
    <fullName>Management_Level_Zone__c</fullName>
    <label>Management Level Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>