force-app/main/default/objects/PreReservation__c/fields/MANAGEMENT_ZONE_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>MANAGEMENT_ZONE_LEVEL__c</fullName>
    <label>MANAGEMENT ZONE LEVEL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MANAGEMENT_ZONE_LEVEL</valueSetName>
    </valueSet>
</CustomField>