force-app/main/default/objects/PreReservation__c/fields/My_Management_Level_Zone__c.field-meta.xml
<CustomField>
    <fullName>My_Management_Level_Zone__c</fullName>
    <formula>OR(
AND(
NOT( ISPICKVAL(MANAGEMENT_ZONE_LEVEL__c , &apos;13&apos;)),
TEXT( $User.MANAGEMENT_ZONE_LEVEL__c) == TEXT( Store__r.MANAGEMENT_ZONE_LEVEL__c)),

/*
AND(
ISPICKVAL(MANAGEMENT_ZONE_LEVEL__c , &apos;13&apos;),
ISPICKVAL($User.Country__c,&apos;CHINA&apos;),
Store_Country__c == &apos;CHINA&apos;),
*/

AND(
ISPICKVAL(MANAGEMENT_ZONE_LEVEL__c , &apos;13&apos;),
ISPICKVAL($User.Country__c,&apos;KOREA&apos;),
Store_Country__c == &apos;KOREA&apos;),

AND(
ISPICKVAL(MANAGEMENT_ZONE_LEVEL__c , &apos;13&apos;),
ISPICKVAL ($User.MANAGEMENT_ZONE_LEVEL__c, &apos;13&apos;),
/*NOT(ISPICKVAL($User.Country__c,&apos;CHINA&apos;)),*/
NOT(ISPICKVAL($User.Country__c,&apos;KOREA&apos;)),
/*Store_Country__c &lt;&gt; &apos;CHINA&apos;,*/
Store_Country__c &lt;&gt; &apos;KOREA&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Management Level Zone</label>
    <type>Checkbox</type>
</CustomField>