force-app/main/default/objects/PreReservation__c/fields/My_preservation__c.field-meta.xml
<CustomField>
    <fullName>My_preservation__c</fullName>
    <formula>OR( Client_Advisor__c =  $User.Id ,  CreatedById = $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My preservation ?</label>
    <type>Checkbox</type>
</CustomField>