force-app/main/default/objects/PreReservation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Exclusive_Campaign_Product__c.Exclusive_Campaign__r.Name</field>
            <operation>equals</operation>
            <value>LV x FG</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Admin_Corporate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exclusive_Campaign_Product__c</referenceTo>
    <relationshipLabel>Pre-Reservations</relationshipLabel>
    <relationshipName>Pre_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>