force-app/main/default/objects/PreReservation__c/fields/Region_Manager__c.field-meta.xml
<CustomField>
    <fullName>Region_Manager__c</fullName>
    <formula>$Permission.Region_Manager_Access</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Manager ?</label>
    <type>Checkbox</type>
</CustomField>