force-app/main/default/objects/PreReservation__c/fields/Serial_Number_final__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_final__c</fullName>
    <formula>Serial_Number2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>