force-app/main/default/objects/PreReservation__c/fields/Serial_Number_Retail__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Retail__c</fullName>
    <label>Initial Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>