force-app/main/default/objects/PreReservation__c/fields/Specific_Number_Only_Formula__c.field-meta.xml
<CustomField>
    <fullName>Specific_Number_Only_Formula__c</fullName>
    <formula>Important_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specific Number Only ?</label>
    <type>Checkbox</type>
</CustomField>