force-app/main/default/objects/PreReservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Pending Validation</label>
            </value>
            <value>
                <fullName>Valide</fullName>
                <label>Waiting for deposit</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Waiting for confirmation</fullName>
                <isActive>false</isActive>
                <label>To be finalized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>