force-app/main/default/objects/PreReservation__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <formula>Store__r.XStoreCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Code</label>
    <type>Text</type>
</CustomField>