force-app/main/default/objects/PreReservation__c/fields/Store_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Store_ReadOnly__c</fullName>
    <formula>Store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store</label>
    <type>Text</type>
</CustomField>