force-app/main/default/objects/PreReservation__c/fields/TECH_Artist_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_Artist_Name__c</fullName>
    <label>Artist Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>