force-app/main/default/objects/PreReservation__c/fields/TECH_Client__c.field-meta.xml
<CustomField>
    <fullName>TECH_Client__c</fullName>
    <label>Client</label>
    <length>128</length>
    <type>Text</type>
</CustomField>