force-app/main/default/objects/PreReservation__c/fields/TECH_Client_Dream_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_Client_Dream_ID__c</fullName>
    <label>Client Dream ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>