force-app/main/default/objects/PreReservation__c/fields/TECH_Country__c.field-meta.xml
<CustomField>
    <fullName>TECH_Country__c</fullName>
    <label>Country / Region</label>
    <length>128</length>
    <type>Text</type>
</CustomField>