force-app/main/default/objects/PreReservation__c/fields/TECH_Initial_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_Initial_Serial_Number__c</fullName>
    <label>Initial Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>