force-app/main/default/objects/PreReservation__c/fields/TECH_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_Serial_Number__c</fullName>
    <formula>BLANKVALUE(VALUE(Serial_Number2__r.Name ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Serial Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>