force-app/main/default/objects/PreReservation__c/fields/TECH_SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>TECH_SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>