force-app/main/default/objects/PreReservation__c/fields/TECH_SKU__c.field-meta.xml
<CustomField>
    <fullName>TECH_SKU__c</fullName>
    <label>SKU</label>
    <length>128</length>
    <type>Text</type>
</CustomField>