force-app/main/default/objects/PreReservation__c/fields/TECH_Specific_Number_Only__c.field-meta.xml
<CustomField>
    <fullName>TECH_Specific_Number_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific Number Only ?</label>
    <type>Checkbox</type>
</CustomField>