force-app/main/default/objects/PreReservation__c/fields/Zone_ID__c.field-meta.xml
<CustomField>
    <fullName>Zone_ID__c</fullName>
    <formula>Store__r.Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone ID</label>
    <type>Text</type>
</CustomField>