force-app/main/default/objects/PreReservation__c/recordTypes/Pre_Reservation.recordType-meta.xml
<RecordType>
    <fullName>Pre_Reservation</fullName>
    <active>false</active>
    <label>Pre-Reservation</label>
</RecordType>