force-app/main/default/objects/PreReservation__c/validationRules/Deposit_Collected.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Collected</fullName>
    <active>true</active>
    <errorConditionFormula>Deposit_collected__c = false &amp;&amp;  TEXT(Status__c) = &apos;Reserved&apos;</errorConditionFormula>
    <errorDisplayField>Deposit_collected__c</errorDisplayField>
    <errorMessage>Please confirm that the deposit is collected to be able to finalise the reservation.</errorMessage>
</ValidationRule>