force-app/main/default/objects/PreReservation__c/validationRules/Deposit_Collected_Before_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Collected_Before_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Deposit_collected__c) &amp;&amp; ISBLANK( Serial_Number2__c )</errorConditionFormula>
    <errorMessage>The pre-reservation should be validated to be finalised</errorMessage>
</ValidationRule>