force-app/main/default/objects/PreReservation__c/validationRules/Store_Zone.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Zone</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Store__r.MANAGEMENT_ZONE_LEVEL__c) &lt;&gt; TEXT(CreatedBy.MANAGEMENT_ZONE_LEVEL__c)</errorConditionFormula>
    <errorDisplayField>Store__c</errorDisplayField>
    <errorMessage>Please select a Store in your zone</errorMessage>
</ValidationRule>