force-app/main/default/objects/PreReservation__c/validationRules/VR02_Active_Exclusive_Campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Active_Exclusive_Campaign</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

	AND ( 
		ISPICKVAL($User.Country__c,&apos;KOREA&apos;) ,
		Exclusive_Campaign__r.KOREA__c = false 
	),

	AND(
		ISPICKVAL( $User.MANAGEMENT_ZONE_LEVEL__c , &apos;13&apos;), 
		NOT(ISPICKVAL($User.Country__c,&apos;KOREA&apos;)),
		Exclusive_Campaign__r.ASIA_NORTH_sans_COREE_CHINE__c  = false 
	),

	AND ( 
		ISPICKVAL($User.MANAGEMENT_ZONE_LEVEL__c , &apos;17&apos;) ,
		Exclusive_Campaign__r.CHINA__c = false 
	),

	AND ( 
		ISPICKVAL($User.MANAGEMENT_ZONE_LEVEL__c , &apos;2&apos;) ,
		Exclusive_Campaign__r.JAPAN__c = false 
	),

	AND ( 
		ISPICKVAL($User.MANAGEMENT_ZONE_LEVEL__c , &apos;15&apos;) ,
		Exclusive_Campaign__r.EMEA__c = false 
	),

	AND ( 
		ISPICKVAL($User.MANAGEMENT_ZONE_LEVEL__c , &apos;3&apos;) ,
		Exclusive_Campaign__r.AMERICAS__c = false 
	),

	AND ( 
		ISPICKVAL($User.MANAGEMENT_ZONE_LEVEL__c , &apos;14&apos;) ,
		Exclusive_Campaign__r.ASIA_SOUTH__c = false 
	)
)</errorConditionFormula>
    <errorMessage>The exclusive campaign is not active in your zone!</errorMessage>
</ValidationRule>