force-app/main/default/objects/PreReservation__c/validationRules/VR05_Specific_Serial_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_Specific_Serial_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND( Important_Number__c ,  ISBLANK(Serial_Number_Retail__c)),
 
AND( 
Important_Number__c,
ISCHANGED(Serial_Number2__c) ,  
Serial_Number2__r.Name  &lt;&gt;   (&apos;0&apos; &amp; TEXT(Serial_Number_Retail__c)), Serial_Number_Retail__c &lt; 10),

AND( 
Important_Number__c,
ISCHANGED(Serial_Number2__c) ,  
Serial_Number2__r.Name  &lt;&gt;   TEXT(Serial_Number_Retail__c), Serial_Number_Retail__c &gt;= 10)
)</errorConditionFormula>
    <errorMessage>Please select the Specific Serial Number !</errorMessage>
</ValidationRule>