force-app/main/default/objects/PreReservation__c/listViews/LV_x_FG_Canceled.listView-meta.xml
<ListView>
    <fullName>LV_x_FG_Canceled</fullName>
    <booleanFilter>((1 AND 2) OR 3 OR 4 OR (7 AND 8)) AND 5 AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Store_Code__c</columns>
    <columns>Store_ReadOnly__c</columns>
    <columns>Client_Advisor2__c</columns>
    <columns>Product__c</columns>
    <columns>SKU__c</columns>
    <columns>Artist_Name__c</columns>
    <columns>Product_Color__c</columns>
    <columns>Client_Dream_ID__c</columns>
    <columns>Client_ReadOnly__c</columns>
    <columns>Specific_Number_Only_Formula__c</columns>
    <columns>Serial_Number_Retail__c</columns>
    <columns>Serial_Number2__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Management_Level_Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Corp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_preservation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Exclusive_Campaign_Name__c</field>
        <operation>equals</operation>
        <value>LV x FG</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <filters>
        <field>Region_Manager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Region__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>LV x FG - Canceled</label>
</ListView>